Use Leaky instead of DestructorAtExit

These need to be accessed on worker threads.

Bug: 796685
Change-Id: I033aabee50cd0f1f09d35eff307c9a8bf962caca
Reviewed-on: https://chromium-review.googlesource.com/837657
Reviewed-by: vmpstr <vmpstr@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525531}
Former-commit-id: a9b81c0b13a8f695a22fb8c08062df3686ae13b2